--- a/src/scss/enhance/_search.scss
+++ b/src/scss/enhance/_search.scss
@@ -30,7 +30,7 @@
 		display:block;
 		line-height: 2.25;
 		height: 2.25rem;
-		font-weight: 700;
+		// font-weight: 700;
 
 		@include respond-min(30em) {
 			// @include font-size(1);
