--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -31,6 +31,11 @@
 
 "page/page__title",
 
+"modules/section--apply",
+"modules/maps",
+"modules/calendar",
+"modules/news",
+
 "enhance/accordion",
 "enhance/big-steps",
 "enhance/buttons",
@@ -45,5 +50,7 @@
 "enhance/slick",
 "enhance/carousel",
 // "enhance/image-hover" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
-"enhance/collapsible-block" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_collapsible-block.scss
+"enhance/collapsible-block", // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_collapsible-block.scss
+
+"base/utils"
 ;
