--- a/src/scss/base/_space.scss
+++ b/src/scss/base/_space.scss
@@ -11,170 +11,59 @@
 p,m = padding,margin
 a,t,r,b,l,h,v = all,top,right,bottom,left,horizontal,vertical
 */
-.pt0, .pv0, .pa0 {
-  padding-top: 0 !important; }
-
-.pt1, .pv1, .pa1 {
-  padding-top: 1em !important; }
-
-.pt2, .pv2, .pa2 {
-  padding-top: 2em !important; }
-
-.pt3, .pv3, .pa3 {
-  padding-top: 3em !important; }
-
-.pt4, .pv4, .pa4 {
-  padding-top: 4em !important; }
-
-.pt5, .pv5, .pa5 {
-  padding-top: 5em !important; }
-
-.pt6, .pv6, .pa6 {
-  padding-top: 6em !important; }
-
-.pr0, .ph0, .pa0 {
-  padding-right: 0 !important; }
-
-.pr1, .ph1, .pa1 {
-  padding-right: 1em !important; }
-
-.pr2, .ph2, .pa2 {
-  padding-right: 2em !important; }
-
-.pr3, .ph3, .pa3 {
-  padding-right: 3em !important; }
-
-.pr4, .ph4, .pa4 {
-  padding-right: 4em !important; }
-
-.pr5, .ph5, .pa5 {
-  padding-right: 5em !important; }
-
-.pr6, .ph6, .pa6 {
-  padding-right: 6em !important; }
-
-.pb0, .pv0, .pa0 {
-  padding-bottom: 0 !important; }
-
-.pb1, .pv1, .pa1 {
-  padding-bottom: 1em !important; }
-
-.pb2, .pv2, .pa2 {
-  padding-bottom: 2em !important; }
-
-.pb3, .pv3, .pa3 {
-  padding-bottom: 3em !important; }
-
-.pb4, .pv4, .pa4 {
-  padding-bottom: 4em !important; }
-
-.pb5, .pv5, .pa5 {
-  padding-bottom: 5em !important; }
-
-.pb6, .pv6, .pa6 {
-  padding-bottom: 6em !important; }
-
-.pl0, .ph0, .pa0 {
-  padding-left: 0 !important; }
-
-.pl1, .ph1, .pa1 {
-  padding-left: 1em !important; }
-
-.pl2, .ph2, .pa2 {
-  padding-left: 2em !important; }
-
-.pl3, .ph3, .pa3 {
-  padding-left: 3em !important; }
-
-.pl4, .ph4, .pa4 {
-  padding-left: 4em !important; }
-
-.pl5, .ph5, .pa5 {
-  padding-left: 5em !important; }
-
-.pl6, .ph6, .pa6 {
-  padding-left: 6em !important; }
-
-.mt0, .mv0, .ma0 {
-  margin-top: 0 !important; }
-
-.mt1, .mv1, .ma1 {
-  margin-top: 1em !important; }
-
-.mt2, .mv2, .ma2 {
-  margin-top: 2em !important; }
-
-.mt3, .mv3, .ma3 {
-  margin-top: 3em !important; }
-
-.mt4, .mv4, .ma4 {
-  margin-top: 4em !important; }
-
-.mt5, .mv5, .ma5 {
-  margin-top: 5em !important; }
-
-.mt6, .mv6, .ma6 {
-  margin-top: 6em !important; }
-
-.mr0, .mh0, .ma0 {
-  margin-right: 0 !important; }
-
-.mr1, .mh1, .ma1 {
-  margin-right: 1em !important; }
-
-.mr2, .mh2, .ma2 {
-  margin-right: 2em !important; }
-
-.mr3, .mh3, .ma3 {
-  margin-right: 3em !important; }
-
-.mr4, .mh4, .ma4 {
-  margin-right: 4em !important; }
-
-.mr5, .mh5, .ma5 {
-  margin-right: 5em !important; }
-
-.mr6, .mh6, .ma6 {
-  margin-right: 6em !important; }
-
-.mb0, .mv0, .ma0 {
-  margin-bottom: 0 !important; }
-
-.mb1, .mv1, .ma1 {
-  margin-bottom: 1em !important; }
-
-.mb2, .mv2, .ma2 {
-  margin-bottom: 2em !important; }
-
-.mb3, .mv3, .ma3 {
-  margin-bottom: 3em !important; }
-
-.mb4, .mv4, .ma4 {
-  margin-bottom: 4em !important; }
-
-.mb5, .mv5, .ma5 {
-  margin-bottom: 5em !important; }
-
-.mb6, .mv6, .ma6 {
-  margin-bottom: 6em !important; }
-
-.ml0, .mh0, .ma0 {
-  margin-left: 0 !important; }
-
-.ml1, .mh1, .ma1 {
-  margin-left: 1em !important; }
-
-.ml2, .mh2, .ma2 {
-  margin-left: 2em !important; }
-
-.ml3, .mh3, .ma3 {
-  margin-left: 3em !important; }
-
-.ml4, .mh4, .ma4 {
-  margin-left: 4em !important; }
-
-.ml5, .mh5, .ma5 {
-  margin-left: 5em !important; }
-
-.ml6, .mh6, .ma6 {
-  margin-left: 6em !important; }
+.pt0, .pv0, .pa0 {padding-top: 0 !important; }
+.pt1, .pv1, .pa1 {padding-top: 1em !important; }
+.pt2, .pv2, .pa2 {padding-top: 2em !important; }
+.pt3, .pv3, .pa3 {padding-top: 3em !important; }
+.pt4, .pv4, .pa4 {padding-top: 4em !important; }
+.pt5, .pv5, .pa5 {padding-top: 5em !important; }
+.pt6, .pv6, .pa6 {padding-top: 6em !important; }
+.pr0, .ph0, .pa0 {padding-right: 0 !important; }
+.pr1, .ph1, .pa1 {padding-right: 1em !important; }
+.pr2, .ph2, .pa2 {padding-right: 2em !important; }
+.pr3, .ph3, .pa3 {padding-right: 3em !important; }
+.pr4, .ph4, .pa4 {padding-right: 4em !important; }
+.pr5, .ph5, .pa5 {padding-right: 5em !important; }
+.pr6, .ph6, .pa6 {padding-right: 6em !important; }
+.pb0, .pv0, .pa0 {padding-bottom: 0 !important; }
+.pb1, .pv1, .pa1 {padding-bottom: 1em !important; }
+.pb2, .pv2, .pa2 {padding-bottom: 2em !important; }
+.pb3, .pv3, .pa3 {padding-bottom: 3em !important; }
+.pb4, .pv4, .pa4 {padding-bottom: 4em !important; }
+.pb5, .pv5, .pa5 {padding-bottom: 5em !important; }
+.pb6, .pv6, .pa6 {padding-bottom: 6em !important; }
+.pl0, .ph0, .pa0 {padding-left: 0 !important; }
+.pl1, .ph1, .pa1 {padding-left: 1em !important; }
+.pl2, .ph2, .pa2 {padding-left: 2em !important; }
+.pl3, .ph3, .pa3 {padding-left: 3em !important; }
+.pl4, .ph4, .pa4 {padding-left: 4em !important; }
+.pl5, .ph5, .pa5 {padding-left: 5em !important; }
+.pl6, .ph6, .pa6 {padding-left: 6em !important; }
+.mt0, .mv0, .ma0 {margin-top: 0 !important; }
+.mt1, .mv1, .ma1 {margin-top: 1em !important; }
+.mt2, .mv2, .ma2 {margin-top: 2em !important; }
+.mt3, .mv3, .ma3 {margin-top: 3em !important; }
+.mt4, .mv4, .ma4 {margin-top: 4em !important; }
+.mt5, .mv5, .ma5 {margin-top: 5em !important; }
+.mt6, .mv6, .ma6 {margin-top: 6em !important; }
+.mr0, .mh0, .ma0 {margin-right: 0 !important; }
+.mr1, .mh1, .ma1 {margin-right: 1em !important; }
+.mr2, .mh2, .ma2 {margin-right: 2em !important; }
+.mr3, .mh3, .ma3 {margin-right: 3em !important; }
+.mr4, .mh4, .ma4 {margin-right: 4em !important; }
+.mr5, .mh5, .ma5 {margin-right: 5em !important; }
+.mr6, .mh6, .ma6 {margin-right: 6em !important; }
+.mb0, .mv0, .ma0 {margin-bottom: 0 !important; }
+.mb1, .mv1, .ma1 {margin-bottom: 1em !important; }
+.mb2, .mv2, .ma2 {margin-bottom: 2em !important; }
+.mb3, .mv3, .ma3 {margin-bottom: 3em !important; }
+.mb4, .mv4, .ma4 {margin-bottom: 4em !important; }
+.mb5, .mv5, .ma5 {margin-bottom: 5em !important; }
+.mb6, .mv6, .ma6 {margin-bottom: 6em !important; }
+.ml0, .mh0, .ma0 {margin-left: 0 !important; }
+.ml1, .mh1, .ma1 {margin-left: 1em !important; }
+.ml2, .mh2, .ma2 {margin-left: 2em !important; }
+.ml3, .mh3, .ma3 {margin-left: 3em !important; }
+.ml4, .mh4, .ma4 {margin-left: 4em !important; }
+.ml5, .mh5, .ma5 {margin-left: 5em !important; }
+.ml6, .mh6, .ma6 {margin-left: 6em !important; }
