--- a/src/scss/enhance/_date-tag.scss
+++ b/src/scss/enhance/_date-tag.scss
@@ -1,38 +1,50 @@
-.events-date-tag {
-	background: #eee;
-	width: 5.5em;
+.events {}
+
+.events__item {
+	margin: 2em 0;
+	display: flex;
+	align-items: flex-start;
+}
+
+.events__content {
+	padding-left: .75em;
+
+	@include respond-min($medium){
+		padding-left: 1em;
+	}
+
+	p {
+		margin-bottom: 0;
+		margin-top: 0;
+		line-height: 1.3;
+	
+		@include respond-min($large){
+			line-height: 1.4;
+		}
+	}
+
+	.events__headline {
+		font-weight: 500;
+		font-family: $gotham;
+	}
+}
+
+
+.events__date-tile {
+	background: #fff;
+	flex-basis: 5em;
+	flex-shrink: 0;
 	text-align: center;
-	margin-right: 1em;
 	padding: .4em 1em 1em;
 	border: 1px solid #ccc;
 	font-family: $gotham;
-	float: left;
-	border-radius: 3px;
+	border-radius: .3em;
 	font-size: .889em;
-	// @include border-radius(3px);
-	// @include font-size (.889);
+	margin-bottom: 0;
 }
 
-.events-date-tag span {
+.events__date-tile span {
 	display: block;
 	font-size: 2.2em;
 	line-height: 1;
-	// font-weight: 200;
-}
-
-[class*='event-feed']{
-
-	.media-box {
-		display: table;
-		width: 100%;
-	}
-
-	.media-box-body {
-		display: table;
-		margin-top: 0;
-	}
-
-	.media-box-body h2 {
-		margin-top: 0;
-	}
 }
