--- a/src/scss/enhance/_proof-points.scss
+++ b/src/scss/enhance/_proof-points.scss
@@ -1,17 +1,28 @@
-.proof-point {
-    background: $bethel--yellow;
-    padding: 2em;
+.proof-points {
+
+    .grid-cell {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $bethel--navy;
+        // background: $bethel--yellow;
+        padding: 1em;
+        border-radius: 5px;
+        margin: 1em;
+    }
 }
 
 .proof-point__text {
     margin-bottom: .75em;
     color: rgba(#fff, .8);
+    font-family: $gotham;
 }
 
 .proof-point__number {
     font-size: 2.5rem;
-    line-height: 1.2;
+    // line-height: 1.2;
     color: #fff;
+    font-family: Georgia, serif;
 
     @include respond-min($medium){
     	font-size: 3rem;
@@ -21,4 +32,5 @@
 
 .proof-point__cite {
     font-size: .8rem;
+    color: rgba(#fff, .8);
 }
