--- a/src/scss/page/_page__title.scss
+++ b/src/scss/page/_page__title.scss
@@ -1,5 +1,5 @@
 .page__title {
-	// margin-top: 1.5em;
+	margin-top: 1em;
 	// margin-bottom: 1em;
 	padding: 0 1em;
 	flex-basis: 100%;
@@ -8,6 +8,7 @@
 		order: 1;
 		flex-shrink: 0;
 		padding: 0;
+		margin-top: 3em;
 	}
 }
 
@@ -15,7 +16,7 @@
 	// font-weight: 700;
 	font-weight: 400;
 	font-size: 2.25rem;
-	// line-height: 1;
+	line-height: 1.1;
 	margin-top: 0;
 	margin-bottom: 0;
 	// padding: 0;
@@ -27,5 +28,6 @@
 
 	@include respond-min(60em){
 		font-size: 3rem;
+		line-height: 1;
 	}
 }
