--- a/src/scss/school/_school__navigation.scss
+++ b/src/scss/school/_school__navigation.scss
@@ -2,19 +2,20 @@
     background: #fff;
     // background: $bethel--yellow;
     // background: #eee;
-    // background: rgba($bethel--blue, .1);
+    // background: rgba($bethel--blue, 1);
+    // background: $bethel--navy;
     margin: 0;
-    padding: .5em .5em;
+    padding: 1em .5em;
     // box-shadow: 0 4px 4px 0 rgba(210, 210, 210, 0.8);
     // overflow-x: scroll;
     // -webkit-overflow-scrolling: touch;
     border-bottom: 1px solid #ccc;
     // border-top: 1px solid #ccc;
     font-family: $gotham;
-    // display: table;
+    // border-top: .3em solid $bethel--yellow;
 
     @include respond-min(60em){
-        padding: 2em;
+        padding: 1em;
     }
 }
 
@@ -30,10 +31,15 @@
     // padding: 0 .5em;
     // color: #333;
     text-align: center;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     // margin-bottom: .5em;
 
-    @include respond-min(60em){
+    @include respond-min($medium){
+        font-size: 1.25em;
+        line-height: 2;
+    }    
+
+    @include respond-min($large){
         font-size: 1.5em;
         line-height: 2;
     }
@@ -89,9 +95,9 @@
 
 .school__navigation ul li {
     display: inline-block;
-    // padding: .25em;
+    padding: .25em;
     margin: 0 .35em;
-    font-size: .9rem;
+    font-size: .8rem;
     // font-weight: 500;
     // font-family: $gotham;
     white-space: nowrap;
@@ -99,6 +105,10 @@
     // letter-spacing: .05em;
     // display: flex;
     // justify-content: space-between;
+
+    @include respond-min($navToggle){
+        font-size: 1rem;
+    }
 }
 
 .school__navigation a {
@@ -106,16 +116,24 @@
     // color: #fff;
     // color: #aaa;
     // opacity: .6;
+
+    @include respond-min($large){
+        padding: .35em .75em;
+    }
 }
 
 .school__navigation .active {
-      background: rgba($bethel--blue, .1);
-      // background: tomato;
-      // background: rgba(#ddd, .35);
+    // background: rgba($bethel--blue, .1);
+    // background: tomato;
+    // background: rgba(#fff, .25);
+    // background: $bethel--navy;
+    background: $bethel--yellow;
     border-radius: 3px;
     // color: #fff;
     // opacity: 1;
-    // font-weight: 500;
+    font-weight: 500;
+    // border-bottom: 3px solid $bethel--yellow;
+    // color: $bethel--yellow;
 }
 
 .school__navigation__menu {
