--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -14,13 +14,29 @@ layout:default.hbs
 
 		{{> global__header }}
 
-		{{> school__navigation }}
+		{{!-- {{> school__navigation }} --}}
 
-		{{> site__feature }}
-		
-		{{> site__title }}
+		{{!-- {{> section--apply }} --}}
 
-		{{> body }}
+		{{!-- {{> site__feature }} --}}
+
+		{{!-- {{> site__title }} --}}
+
+		{{!-- {{> calendar }} --}}
+
+		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
+
+		<div class="inner--content  margins-off">
+		    <div class="inner-wrap--site__navigation" id="js-inner-wrap--site__navigation">
+
+		    	{{> site__navigation }}
+
+		        {{> page__title }}
+
+				{{> body }}
+
+		    </div><!--/#inner-wrap-->
+		</div>
 
 		{{> global__footer }}
 
