--- a/src/templates/partials/carousel.hbs
+++ b/src/templates/partials/carousel.hbs
@@ -8,6 +8,7 @@
             </figure>
         </a>
     </div>
+
     <div class="slick-item">
         <a href="http://bethel.edu/stories/matthew-kirk" title="">
             <img class="feature__img" src="https://cdn2.bethel.edu/resize/unsafe/1500x0/smart/http://www.bethel.edu/stories/images/profile-kirk-home.jpg" title="" style="opacity: 1;">
@@ -19,3 +20,61 @@
 
     </div>
 </div>
+
+
+{{!-- <div class="slick-carousel  carousel--quote">
+
+    <div class="slick-item">
+        <div class="pa1  quote  grayLighter">
+            <div class="grid ">
+                <div class="grid-cell  u-medium-3-12">
+                    <div class="grid-pad-1x">
+                        <div class="quote__avatar">
+                            <img src="data:image/gif;base64,R0lGODlhEAAJAIAAAP///wAAACH5BAEAAAAALAAAAAAQAAkAAAIKhI+py+0Po5yUFQA7" class="delayed-image-load image-replace" alt="" data-src="https://cdn2.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/_shared-content/quotes/images/cas__art_valley-elise.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-cell  u-medium-9-12">
+                    <div class="grid-pad-1x">
+                        <p class="quote__text">The Art Department at Bethel was an incredibly formative place for me. You'll find kind and genuinely caring experts who will propel you forward in your artistic, spiritual, and professional journey and provide a unique, personalized experience.</p>
+                        <cite class="quote__source">–Elise Valley</cite>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slick-item">
+        <div class="pa1  quote  grayLighter">
+            <div class="grid ">
+                <div class="grid-cell  u-medium-13-12">
+                    <div class="grid-pad-1x">
+                        <p class="quote__text">After graduation I interned at the Minnesota Center for Book Arts, which turned into a job.</p>
+                        <cite class="quote__source">–Sarah Lee</cite>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slick-item">
+        <div class="pa1  quote  grayLighter">
+            <div class="grid ">
+                <div class="grid-cell  u-medium-3-12">
+                    <div class="grid-pad-1x">
+                        <div class="quote__avatar">
+                            <img src="https://cdn2.bethel.edu/resize/unsafe/300x0/smart/https://www.bethel.edu/_shared-content/quotes/images/cas__art_peller-allison.jpg" class="delayed-image-load image-replace" alt="" data-src="https://cdn2.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/_shared-content/quotes/images/cas__art_peller-allison.jpg" width="300">
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-cell  u-medium-9-12">
+                    <div class="grid-pad-1x">
+                        <p class="quote__text">Art professors go above and beyond for students open to challenge as they pursue their art careers. Many Bethel alums are still active in the art world and have successful careers. We've developed a growing, active national alumni network.</p>
+                        <cite class="quote__source">–Allison Peller</cite>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div> --}}
