--- a/src/templates/partials/site__feature.hbs
+++ b/src/templates/partials/site__feature.hbs
@@ -7,10 +7,14 @@
 	    "
 	    src="//cdn1.bethel.edu/resize/unsafe/320x0/smart/https://www.bethel.edu//undergrad/academics/anthropology-sociology-reconciliation/images/site-images/professor-4-1.jpg"
 	></img>
-	<h1 class="title">
-	<small class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Adult Undergrad</a><a href="#">Academics</a></small><br>
-	Anthropology, Sociology and Reconciliation Studies</h1>
-	{{!-- <h1 class="title">Anthropology, Sociology and Reconciliation Studies</h1> --}}
-	{{!-- <h1 class="title">About</h1> --}}
+	<div class="turts">
+		<div class="burts">
+{{!-- 	<h1 class="site__title">Anthropology, Sociology and Reconciliation Studies<br>
+	<small class="breadcrumb  margins-off"><a href="/"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a><a href="/undergrad">Undergrad</a><a href="#">Academics</a><a>Anthropology, Sociology & Reconciliation</a><a>Majors & Minors</a><a>Sociocultural Studies</a></small><br>
+	Anthropology, Sociology and Reconciliation Studies</h1> --}}
+	{{!-- <h1 class="site__title">Anthropology, Sociology and Reconciliation Studies</h1> --}}
+	{{!-- <h1 class="site__title">Adult Undergrad</h1> --}}
+	</div>
+	</div>
 
 </div>
