--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -16,13 +16,7 @@ layout:default.hbs
 
 		{{!-- {{> school__navigation }} --}}
 
-		{{!-- {{> section--apply }} --}}
-
-		{{!-- {{> site__feature }} --}}
-
-		{{!-- {{> site__title }} --}}
-
-		{{!-- {{> calendar }} --}}
+		{{> parallax--text }}
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
