--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -3,18 +3,18 @@ title: HOME
 layout: default.hbs
 ---
 
-<div class="main">
+<div class="main js-animate">
 
     {{!-- {{> page__title }} --}}
     {{!-- <img src="//fillmurray.com/800/350"> --}}   
 
     <div class="grid">
-        <div class="grid-cell">
+        <div class="grid-cell u-medium-1-2">
             <div class="medium-grid-pad-1x">{{> news }}</div>
         </div>
-        <div class="grid-cell">
+{{!--         <div class="grid-cell">
             <div class="medium-grid-pad-1x">{{> events }}</div>
-        </div>
+        </div> --}}
     </div>
     
     <p>Bethel University is a top-ranked, evangelical Christian university based in St. Paul, Minnesota.</p>
