--- a/src/scss/grid/_flex-grid.scss
+++ b/src/scss/grid/_flex-grid.scss
@@ -229,39 +229,39 @@ $add-legacy-support: false !default;
     }
 
     @if $add-legacy-support != true{
-      .u-#{$name}#{$sep}1-12  {flex-basis: 8.33333%;}
+      .u-#{$name}#{$sep}1-12  {flex-basis: 8.33333%;flex-grow:0;}
       .u-#{$name}#{$sep}2-12,
-      .u-#{$name}#{$sep}1-6  {flex-basis: 16.66667%;}
-      .u-#{$name}#{$sep}1-5   {flex-basis: 20%;}
+      .u-#{$name}#{$sep}1-6  {flex-basis: 16.66667%;flex-grow:0;}
+      .u-#{$name}#{$sep}1-5   {flex-basis: 20%;flex-grow:0;}
       .u-#{$name}#{$sep}3-12,
-      .u-#{$name}#{$sep}1-4  {flex-basis: 25%;}
+      .u-#{$name}#{$sep}1-4  {flex-basis: 25%;flex-grow:0;}
       .u-#{$name}#{$sep}4-12,
       .u-#{$name}#{$sep}2-6,
-      .u-#{$name}#{$sep}1-3  {flex-basis: 33.33333%;}
-      .u-#{$name}#{$sep}2-5   {flex-basis: 40%;}
-      .u-#{$name}#{$sep}5-12  {flex-basis: 41.66667%;}
+      .u-#{$name}#{$sep}1-3  {flex-basis: 33.33333%;flex-grow:0;}
+      .u-#{$name}#{$sep}2-5   {flex-basis: 40%;flex-grow:0;}
+      .u-#{$name}#{$sep}5-12  {flex-basis: 41.66667%;flex-grow:0;}
       .u-#{$name}#{$sep}6-12,
       .u-#{$name}#{$sep}3-6
       .u-#{$name}#{$sep}2-4,
-      .u-#{$name}#{$sep}1-2  {flex-basis: 50%;}
-      .u-#{$name}#{$sep}7-12  {flex-basis: 58.33333%;}
-      .u-#{$name}#{$sep}3-5   {flex-basis: 60%;}
+      .u-#{$name}#{$sep}1-2  {flex-basis: 50%;flex-grow:0;}
+      .u-#{$name}#{$sep}7-12  {flex-basis: 58.33333%;flex-grow:0;}
+      .u-#{$name}#{$sep}3-5   {flex-basis: 60%;flex-grow:0;}
       .u-#{$name}#{$sep}8-12,
       .u-#{$name}#{$sep}2-3,
-      .u-#{$name}#{$sep}4-6  {flex-basis: 66.66667%;}
+      .u-#{$name}#{$sep}4-6  {flex-basis: 66.66667%;flex-grow:0;}
       .u-#{$name}#{$sep}9-12,
-      .u-#{$name}#{$sep}3-4  {flex-basis: 75%;}
-      .u-#{$name}#{$sep}4-5   {flex-basis: 80%;}
+      .u-#{$name}#{$sep}3-4  {flex-basis: 75%;flex-grow:0;}
+      .u-#{$name}#{$sep}4-5   {flex-basis: 80%;flex-grow:0;}
       .u-#{$name}#{$sep}10-12,
-      .u-#{$name}#{$sep}5-6 {flex-basis: 83.33333%;}
-      .u-#{$name}#{$sep}11-12 {flex-basis: 91.66667%;}
+      .u-#{$name}#{$sep}5-6 {flex-basis: 83.33333%;flex-grow:0;}
+      .u-#{$name}#{$sep}11-12 {flex-basis: 91.66667%;flex-grow:0;}
       .u-#{$name}#{$sep}12-12,
       .u-#{$name}#{$sep}6-6,
       .u-#{$name}#{$sep}5-5,
       .u-#{$name}#{$sep}4-4,
       .u-#{$name}#{$sep}3-3,
       .u-#{$name}#{$sep}2-2,
-      .u-#{$name}#{$sep}1-1   {flex-basis: 100%;}
+      .u-#{$name}#{$sep}1-1   {flex-basis: 100%;flex-grow:0;}
     };
   }
 
