--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -48,12 +48,11 @@
 "enhance/parallax",
 "enhance/proof-points",
 "enhance/quotes",
-// "enhance/search",
-"../../../rex/src/scss/enhance/svg-icons",
+"enhance/svg-icons",
 "enhance/slick",
 "enhance/carousel",
-"enhance/image-hover", // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
-"enhance/collapsible-block", // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_collapsible-block.scss
+"enhance/image-hover", 
+"enhance/collapsible-block", 
 
 "base/utils"
 ;
