--- a/src/scss/modules/_calendar.scss
+++ b/src/scss/modules/_calendar.scss
@@ -111,7 +111,8 @@
 
 .calendar-grid .event-description,
 .calendar-grid .category,
-.calendar-grid .day {
+.calendar-grid .day,
+.calendar-grid .today {
 	display: none;
 }
 
