--- a/src/templates/partials/social-media.hbs
+++ b/src/templates/partials/social-media.hbs
@@ -1,9 +1,9 @@
-                <div class="site__social-media">
-                    <p class="site__social-media__title">Join our community</p>
-                    <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
-                    Facebook</a>
-                    <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
-                    Twitter</a>
-                    <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
-                    LinkedIn</a>
-                </div>
+<div class="social-media">
+    <p class="social-media__title">Join our community</p>
+    <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
+    Facebook</a>
+    <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
+    Twitter</a>
+    <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
+    LinkedIn</a>
+</div>
