--- a/src/scss/site/_site__social-media.scss
+++ b/src/scss/site/_site__social-media.scss
@@ -1,5 +1,4 @@
-.site__social-media {
-	background: #eee;
+.social-media {
 	font-family: $gotham;
 
 	display: flex;
@@ -24,7 +23,7 @@
 	}
 }
 
-.site__social-media__title {
+.social-media__title {
 	margin-bottom: .25em;
 	font-weight: 500;
 	margin-right: 1em;
