--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -26,7 +26,6 @@
 "site/site__title",
 "site/site__navigation",
 "site/site__features",
-"site/site__social-media",
 "site/site__image-bank",
 
 "page/page__title",
@@ -37,6 +36,9 @@
 "modules/calendar",
 "modules/news",
 "modules/search",
+"modules/social-media",
+"modules/moving-picture",
+"modules/section--home",
 
 "enhance/accordion",
 "enhance/animation",
