--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -5,7 +5,8 @@ layout: default.hbs
 
 <div class="main js-animate">
 
-    {{!-- {{> page__title }} --}}
+    {{> proof-points }}
+    {{> table }}
     {{!-- <img src="//fillmurray.com/800/350"> --}}   
 
     <div class="grid">
