--- a/src/templates/partials/proof-points.hbs
+++ b/src/templates/partials/proof-points.hbs
@@ -1,6 +1,4 @@
-<h2 class="uppercase-underlined">The Highlights</h2>
-<div class="center">
-    <h2>What can you expect when you join us at Bethel?</h2> </div>
+<h2 class="uppercase-underlined">Highlights</h2>
 <div class="grid proof-points">
     <div class="grid-cell animate animate--fadeIn">
         <div class="grid-pad-1x">
