--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -3,10 +3,28 @@
 	background-color: #fff;
 }
 
-.float-right {
-	float:right;
+.bkg--light-gray {
+	background-color: #eee;
 }
 
-.float-left {
-	float:left;
+
+.vh110 {
+	height: 110vh;
+}
+
+
+.va-container {
+	display: table;
+	width: 100%;
+	height: 100%;
+}
+
+.va-middle {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.va-bottom {
+	display: table-cell;
+	vertical-align: bottom;
 }
