--- a/src/scss/enhance/_proof-points.scss
+++ b/src/scss/enhance/_proof-points.scss
@@ -1,4 +1,5 @@
 .proof-points {
+    color: #fff;
 
     .grid-cell {
         display: flex;
@@ -16,13 +17,16 @@
     margin-bottom: .75em;
     color: rgba(#fff, .8);
     font-family: $gotham;
+    text-align: center;
 }
 
 .proof-point__number {
     font-size: 2.5rem;
-    // line-height: 1.2;
+    line-height: 1;
     color: #fff;
-    font-family: Georgia, serif;
+    // font-family: Georgia, serif;
+    display: inline-block;
+    margin-bottom: .25em;
 
     @include respond-min($medium){
     	font-size: 3rem;
