--- a/src/scss/modules/_news.scss
+++ b/src/scss/modules/_news.scss
@@ -7,11 +7,13 @@
 
 .news__image {
 	flex-basis: 40%;
+	min-width: 1px;
 }
 
 .news__content {
 	padding-left: .75em;
 	flex-basis: 60%;
+	min-width: 1px;
 
 	@include respond-min($medium){
 		padding-left: 1em;
