--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -16,7 +16,8 @@ layout:default.hbs
 
 		{{!-- {{> school__navigation }} --}}
 
-		{{!-- {{> parallax--text }} --}}
+		{{> moving-picture }}
+
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
@@ -29,7 +30,7 @@ layout:default.hbs
 
 				{{> body }}
 
-		    </div><!--/#inner-wrap-->
+		    </div>
 		</div>
 
 		{{> global__footer }}
