--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -3,26 +3,73 @@ title: LAYOUT
 layout: default.hbs
 ---
 
-
-
-<div class="grid  margins-off">
-
-<div class="grid-cell  main-content--with-nav">
-<p>John Alexis Edgren <strong>founded Bethel as a seminary</strong> in 1871, with the name Baptist Union Theological Seminary. The seminary trained pastors to serve Swedish Baptist immigrants, fleeing religious persecution in Europe. Edgren, a sea captain and scholar who knew 30 languages, founded Bethel on the enduring conviction that Christians ought to love God with their minds and represent Him in all fields.</p>
-<h2>Moving to a University</h2>
-<p>The Baptist General Conference (now Converge Worldwide) took on support of the seminary in 1914, moved it from Chicago to St. Paul, and merged it with a Christian high school. Following World War II, Bethel answered demand for four-year degrees, becoming Bethel College &amp; Seminary.</p>
-<p>Over the following decades, visionary leaders expanded Bethel Seminary to the West and East coasts, while growing the undergraduate program in St. Paul. In 1989, non-theological graduate programs were launched, followed by bachelor's degrees for working adults along with online learning options.</p>
-<p>In 2004, already classified among "master's level universities," Bethel changed its name to Bethel University to match its broad scope of programs across 4 schools:</p>
-<ul>
-<li><a href="http://cas.bethel.edu">College of Arts &amp; Sciences</a></li>
-<li><a href="http://caps.bethel.edu">College of Adult &amp; Professional Studies</a></li>
-<li><a href="http://gs.bethel.edu">Graduate School</a></li>
-<li><a href="http://seminary.bethel.edu">Bethel Seminary</a></li>
-</ul>
-<p>Bethel remains a private, Christian university, sponsored in part by the churches of Converge Worldwide, but open to all men and women willing to learn within an evangelical perspective and community.</p>
-<h2>Poised for the Future</h2>
-<p>In less than three decades, Bethel's programs have more than doubled to over 100 degree options, and enrollment has tripled to 6,000 students. But Bethel remains true to the vision of its founder, John Edgren: to develop broadly educated, critically thinking Christians-changing the world through service and leadership in Christ's name.</p>
+<div class="section--home__holder  section--home__academics  parallax">
+	<div class="inner">
+		<div class="grid">
+			<div class="grid-cell u-medium-1-2">
+				<div class="grid-pad-2x">				
+					<h2>Make discoveries that reach beyond the classroom.</h2>	
+					<p>Find out how a Bethel education will prepare you to follow your dreams, do work that matters, and live with purpose.</p>
+					<ul>
+						<li><a href="#">Undergrad majors and minors</a></li>
+						<li><a href="#">Adult undergrad degrees</a></li>
+						<li><a href="#">Graduate programs</a></li>
+						<li><a href="#">Seminary programs</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>	
 </div>
-<div class="grix d-cell  main-content--flex">qui exercitationem, dolorem quam fuga! Velit culpa odio a perferendis optio eius quidem earum, obcaecati ipsa, corporis deserunt natus veniam accusamus laborum id ipsam molestias unde quibusdam saepe consequuntur libero quaerat, aspernatur magni. Omnis qui perspiciatis doloremque repellendus quisquam? Fugit maxime alias adipisci mollitia, dolorum quod illo culpa quidem neque aperiam, ad, temporibus numquam sint omnis corporis repellendus repellat ipsum dicta explicabo quisquam sequi minima eaque! Eos pariatur voluptatibus alias sint explicabo quaerat iste perspiciatis atque ipsam aspernatur ad nihil, dolor illum fuga aut hic eius repellendus? Iure cupiditate non, numquam veritatis voluptas! Nemo reiciendis, reprehenderit, iure eaque totam quam nulla tenetur dolores dolorem voluptatem autem! Natus eligendi sequi ratione facere modi incidunt fuga blanditiis quibusdam, aliquid labore voluptate recusandae vel ea, rem qui voluptates nostrum consequatur dignissimos eveniet, repellat laboriosam autem voluptatibus assumenda. Impedit at velit officiis mollitia placeat amet similique aspernatur voluptatum quisquam eum quia excepturi quo maiores, ratione repellendus? Suscipit consectetur eum accusantium eos, obcaecati a dolore ad vitae soluta nisi odit ex ut beatae, numquam itaque neque voluptates, praesentium nostrum nesciunt id sint? Iure aliquam eum, eligendi iste similique perspiciatis, dolores minima. Ipsa, modi, cupiditate. Voluptas quis recusandae maiores asperiores soluta adipisci enim beatae molestias nisi. Labore nesciunt itaque impedit vitae dicta fugit quis asperiores accusamus unde molestias tempora, autem debitis blanditiis. Aliquam molestias iusto, ad? Nesciunt minus, possimus fugit. Eum maxime nisi vitae, tempora officia iure porro, impedit nam ad culpa reprehenderit hic incidunt temporibus nulla sunt, quidem. Aut consequatur, necessitatibus nihil? Nulla nobis nisi quasi placeat ad illum porro recusandae ea accusamus, fuga magni. Deserunt reiciendis labore natus maxime, impedit voluptatibus odit quis porro, eveniet animi aliquam! Officia inventore ipsa, recusandae nobis obcaecati omnis! Necessitatibus repellat vitae eum iusto tempora mollitia fugiat veritatis delectus maiores nemo autem illum ut ipsa porro tenetur accusamus odit laudantium repudiandae, quisquam distinctio. Eum, ad iste temporibus illo voluptatum ipsum eveniet magni, maxime, ipsam in quis aliquam necessitatibus pariatur! Aperiam libero, adipisci amet optio omnis eius perspiciatis architecto assumenda velit asperiores dolorum a quia illo esse nostrum porro fugit quae dolores sint reprehenderit, eligendi vero reiciendis inventore quo. Iure ratione veniam minima magnam neque voluptates, quis quasi obcaecati alias eligendi nostrum aperiam repudiandae recusandae maxime fuga cupiditate, facere eaque porro, sed. Inventore blanditiis quia, facere, facilis quas est, iusto veniam aliquam magni placeat vero dolorum? Sunt saepe voluptate sint blanditiis sapiente nemo, dolor commodi, sed fuga a, ducimus esse nostrum! Quos pariatur magnam praesentium voluptatem, exercitationem at suscipit iusto, nemo temporibus eaque iure illum sint eum libero distinctio voluptates reprehenderit ea aliquid quia quae voluptas! Nisi eos delectus itaque magnam molestiae asperiores, vero provident culpa qui voluptate quo sequi laborum harum earum quaerat commodi, voluptas? Facere neque ullam voluptate quis ipsam nesciunt deleniti assumenda, quisquam tempora. Voluptates omnis accusamus itaque necessita
+
+<div class="section--home__holder  section--home__faith  parallax">
+	<div class="inner">
+		<div class="grid">
+			<div class="grid-cell  u-medium-1-2">
+				<div class="grid-pad-2x">
+					<h2>Live out your faith.</h2>
+					<p>We work hard to understand Christ’s message and try our best to spread his love, every day. Here's what it looks like.</p>
+					<ul>
+						<li><a href="//www.bethel.edu/about/faith">Faith at Bethel</a></li>
+						<li><a href="//www.bethel.edu/undergrad/campus-ministries">Worship &amp; Ministry</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>	
 </div>
+
+<div class="section--home__holder  section--home__community  parallax">
+	<div class="inner">
+		<div class="grid">
+			<div class="grid-cell u-medium-1-2">
+				<div class="grid-pad-2x">				
+					<h2>Join a community you’ll call home.</h2>	
+					<p>Our students are gracious servants, compassionate friends, and thoughtful neighbors who are intentional about helping each other grow, and having a lot of fun while they're at it.</p>
+					<ul>	
+						<li><a href="//www.bethel.edu/undergrad/student-life/">Student Life at Bethel</a></li>
+						<li><a href="//www.bethel.edu/undergrad/student-life/activities/">Clubs &amp; Organizations</a></li>
+						<li><a href="//www.bethel.edu/undergrad/student-life/activities/">Athletics</a></li>
+						<li><a href="//www.bethel.edu/undergrad/student-life/housing-dining/">Housing &amp; Dining</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>	
+</div>
+
+
+<div class="section--home__holder  section--home__story">
+	<div class="inner">
+		<div class="grid">
+			<div class="grid-cell  u-medium-1-2  u-large-2-5">
+				<h2>Your story starts here.</h2>
+				<p>You’re looking for a place where you can</p>
+				<h3>challenge yourself, support the people around you, find community, laugh...a lot, learn new things, live out your faith, make a difference, serve your neighbors, explore the world, create hope, work hard, dream big, live with purpose, have tons of fun, ask important questions, spread Christ’s love</h3>
+				<p>Bethel is that place. Here, you’ll be challenged to think critically and creatively as you make discoveries that can change the world. You’ll be supported by a community of friends and mentors as you follow your dreams and discover your purpose. And you’ll be inspired to do and be your best as you find new ways to spread Christ’s love. 
+				You were made to accomplish incredible things. Get started at Bethel.</p>
+				<p class="mt2"><a href="//www.bethel.edu/admissions/request-info/" class="btn  mr1">Request info</a> <a href="//www.bethel.edu/admissions/apply/" class="btn">Start your application</a></p>			
+			</div>
+		</div>
+	</div>	
 </div>
