--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -1,26 +1,24 @@
 <footer class="global__footer">
     <div class="inner">
 
-        <div class="grid">
-        <div class="grid-cell u-medium-2-4">
+        <div class="center"><button class="btn btn-small"><span class="arrow-up"></span>Back to Top<span class="arrow-up"></span></button></div>
+
+        <div class="grid mt2">
+        <div class="grid-cell u-medium-1-3">
             <div class="grid-pad-1x">
+                <img src="//cdn4.bethel.edu/images/seal2.png"/>
+                <h1 class="h5">Bethel University</h1>
+                <address>3900 Bethel Drive
+                    <br/>St. Paul, MN 55112</address>
+                <p>651.638.6400</p>
 
-
-                        <img src="//cdn4.bethel.edu/images/seal2.png"/>
-
-                        <h1 class="h5">Bethel University</h1>
-                        <address>3900 Bethel Drive
-                            <br/>St. Paul, MN 55112</address>
-                        <p>651.638.6400</p>
-
-
-                        <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
-                        <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
-                    
+                <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
+                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
+            
                 </div>
             </div>
 
-            <div class="grid-cell u-medium-1-4">
+            <div class="grid-cell u-medium-1-3">
                 <div class="grid-pad-1x">
                     <h2 class="h5">Information For</h2>
                     <ul class="">
@@ -33,7 +31,7 @@
                     </ul> 
                </div>
             </div>
-            <div class="grid-cell u-medium-1-4">
+            <div class="grid-cell u-medium-1-3">
                 <div class="grid-pad-1x">
                     <ul class=" ">
                         <li>{{!-- <svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#user"></use></svg> --}}<a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
@@ -43,35 +41,12 @@
                     </ul>
                 </div>
             </div>
-{{!--             <div class="grid-cell u-medium-1-3">
-                <div class="grid-pad-1x">
-                    <h2 class="h5">Resources</h2>
-                    <ul class="unstyled ">
-                        <li><a href="https://blink.bethel.edu/">Blink</a></li>
-                        <li><a href="https://mail.bethel.edu">Email</a></li>
-                        <li><a href="https://moodle.bethel.edu/">Moodle</a></li>
-
-                    </ul>
-                </div>
-            </div> --}}
         </div>
 
-        {{> social-media }}
-
+        <div class="mt3"> 
+            {{> social-media }}
+        </div>
     </div>
-
-{{!--                 <ul class="pull-left">
-        <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Home</a></li>
-        <li><a href="http://www.bethel.edu/about/">About</a></li>
-        <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
-        <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
-        <li><a href="http://cas.bethel.edu/student-life/">Student Life</a></li>
-        <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
-        <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
-        <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
-    </ul> --}}
-
-
 
     <p class="center pa1"><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
 </footer>
